--- a/etrade_trading_bot/config/credentials.yaml
+++ b/etrade_trading_bot/config/credentials.yaml
@@ -1,1 +1,7 @@
 # Placeholder
+etrade: 
+consumer_key: "YOUR_CONSUMER_KEY" 
+consumer_secret: "YOUR_CONSUMER_SECRET" 
+access_token: "YOUR_ACCESS_TOKEN" 
+access_token_secret: "YOUR_ACCESS_TOKEN_SECRET" 
+account_id: "YOUR_ACCOUNT_ID"
